# DaVinci

./: .gitignore  README.md
Agents/content_planner/: README.md  pyproject.toml
Agents/content_planner/src/content_planner/: crew.py  main.py
Agents/content_planner/src/content_planner/config/: agents.yaml  tasks.yaml
blogforge_ai/: .env.example  .gitignore  .testargments.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
blogforge_ai/src/blogforge_ai/: api.py  config.py  crew.py  litellm_groq_patch.py  main.py  schemas.py  utils.py
blogforge_ai/src/blogforge_ai/config/: agents.yaml  tasks.yaml
blogforge_ai/src/blogforge_ai/services/: pipeline.py  scheduler.py  store.py
blogforge_ai/src/blogforge_ai/static/: styles.css
blogforge_ai/src/blogforge_ai/templates/: index.html
blogforge_ai/src/blogforge_ai/tools/: devto_tool.py  hf_image_tool.py
