[project]
name = "content_planner"
version = "0.1.0"
description = "content_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3"
]

[project.scripts]
content_planner = "content_planner.main:run"
run_crew = "content_planner.main:run"
train = "content_planner.main:train"
replay = "content_planner.main:replay"
test = "content_planner.main:test"
run_with_trigger = "content_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
